# codonrs

./: .gitignore  Cargo.toml  README.md  pixi.toml
src/: genetic_code.json  lib.rs  main.rs
tests/: rscu.rs
