[package]
name = "codonrs"
version = "0.2.1"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/mcgilmore/codonrs"
description = "Calculate relative synonymous codon usage for coding DNA sequences in a fasta file"
exclude = ["tests/cds_adapted.fasta"]

[dependencies]
bio = "2.0.3"
clap = { version = "4.5.32", features = ["derive"] }
rayon = "1.10.0"
serde = "1.0.217"
serde_json = "1.0.138"
tqdm = "0.7.0"
